feat: add banner and social proof sections to homepage

--- a/index.html
+++ b/index.html
@@ -48,6 +48,42 @@
 
   <main class="container">
     <!-- hero section, services, features -->
+   <!-- Inside the main section, replace the empty section with this hero section -->
+<section class="hero-section">
+  <div class="hero-content">
+    <div class="hero-tag">Design System For Gen Z</div>
+    <h1>Unleash Your Inner Design Sloth Today.</h1>
+    <p>Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Cras fermentum odio eu feugiat pretium nibh ipsum. Venenatis cras sed felis eget velit aliquet.</p>
+    <div class="app-buttons">
+      <a href="#" class="app-store">
+        <img src="assets/images/app-store.png" alt="App Store">
+      </a>
+      <a href="#" class="google-play">
+        <img src="assets/images/google-play.png" alt="Google Play">
+      </a>
+    </div>
+  </div>
+  <div class="hero-image">
+    <img src="assets/images/Desktop-min 1.png" alt="Dashboard Interface">
+    <img src="assets/images/smallScreen.png" alt="screen">
+  </div>
+  <!-- Social Proof Section -->
+  <div class="clients-section">
+ 
+    <div class="client-logos">
+      <img src="assets/images/delta.png" alt="Delta">
+      <img src="assets/images/boeing.png" alt="Boeing">
+      <img src="assets/images/spacex.png" alt="SpaceX">
+      <img src="assets/images/ibm.png" alt="IBM">
+      <img src="assets/images/walmart.png" alt="Walmart">
+      <img src="assets/images/uber.png" alt="Uber">
+      <img src="assets/images/google.png" alt="Google">
+      <img src="assets/images/samsung.png" alt="Samsung">
+      <img src="assets/images/pepsi.png" alt="Pepsi">
+      <img src="assets/images/adidas.png" alt="Adidas">
+    </div>
+  </div>
+</section>
   </main>
 
   <footer class="container">
