--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
       <img src="assets/images/smallScreen.png" alt="Mobile Dashboard" class="mobile-dashboard">
     </div>
     
+  
+  </div>
+</section>
+
+<!-- social proof section -->
+ <section>
     <div class="client-logos">
       <div class="logo-row">
         <img src="assets/images/delta.png" alt="Delta">
@@ -96,8 +102,7 @@
         <img src="assets/images/adidas.png" alt="Adidas">
       </div>
     </div>
-  </div>
-</section>
+ </section>
 
 <!-- Features Section -->
 <section class="features-section">
